Cambios de campos Asignado , monto inversion y ortografia

--- a/odt_tvp_v2/views/medios.xml
+++ b/odt_tvp_v2/views/medios.xml
@@ -333,6 +333,7 @@
                               <field name="foro_tv"/>
                               <field name="foro_tv_descrip"/>
                               <field name="monto_inverison_tvabierta"/>
+                              <field name="asignacion_a"/>
                               <field name="tvsa_abierta_observaciones"/>
                             </group>
                           </group>
