Correccion Contact Center, icono, formula en Digital

--- a/odt_tvp_v2/views/contact.xml
+++ b/odt_tvp_v2/views/contact.xml
@@ -389,7 +389,7 @@
                               </group>                              
                             </group>                            
                           </group>
-                              <page name="cotizacion1">
+                              <page name="cotizacion1" attrs="{'invisible' : [('tipo_servicio1','!=','5'),('tipo_servicio2','!=','5'),('tipo_servicio3','!=','5'),('tipo_servicio4','!=','5'),('tipo_servicio5','!=','5'),('tipo_servicio6','!=','5'),('tipo_servicio7','!=','5'),('tipo_servicio8','!=','5')]}">
                                   <field name="tabla_cotizacion_contact1" widget="one2many_list">
                                     <tree editable="bottom">
                                         <field name="tipo_llamada" />
@@ -401,7 +401,7 @@
                               </page>
                               <br/>
                             <h3 style="text-align: center;">Costos mínimos obligados a cobrar</h3><br/>
-                               <page name="cotizacion2" string="Cotizacion 2">
+                               <page name="cotizacion2" string="Cotizacion 2" attrs="{'invisible' : [('tipo_servicio1','!=','5'),('tipo_servicio2','!=','5'),('tipo_servicio3','!=','5'),('tipo_servicio4','!=','5'),('tipo_servicio5','!=','5'),('tipo_servicio6','!=','5'),('tipo_servicio7','!=','5'),('tipo_servicio8','!=','5')]}">
                                   <field name="tabla_cotizacion_contact2" widget="one2many_list">
                                     <tree editable="bottom">
                                         <field name="numero_dictaminacion" />
@@ -416,7 +416,7 @@
                                     </field>
                               </page>
                               <br/>
-                               <page name="cotizacion3" string="Cotizacion 3">
+                               <page name="cotizacion3" string="Cotizacion 3" attrs="{'invisible' : [('tipo_servicio1','!=','5'),('tipo_servicio2','!=','5'),('tipo_servicio3','!=','5'),('tipo_servicio4','!=','5'),('tipo_servicio5','!=','5'),('tipo_servicio6','!=','5'),('tipo_servicio7','!=','5'),('tipo_servicio8','!=','5')]}">
                                   <field name="tabla_cotizacion_contact3" widget="one2many_list">
                                     <tree editable="bottom">
                                         <field name="numero_dictaminacion" />
@@ -430,7 +430,7 @@
                                     </tree>
                                     </field>
                               </page>
-                               <page name="cotizacion4" string="Cotizacion 4">
+                               <page name="cotizacion4" string="Cotizacion 4" attrs="{'invisible' : [('tipo_servicio1','!=','5'),('tipo_servicio2','!=','5'),('tipo_servicio3','!=','5'),('tipo_servicio4','!=','5'),('tipo_servicio5','!=','5'),('tipo_servicio6','!=','5'),('tipo_servicio7','!=','5'),('tipo_servicio8','!=','5')]}">
                                   <field name="tabla_cotizacion_contact4" widget="one2many_list">
                                     <tree editable="bottom">
                                         <field name="llamada_salida" />
@@ -439,6 +439,23 @@
                                         <field name="costo_minuto_vendido" />
                                     </tree>
                                     </field>
+                              </page>
+                               <page name="cotizacion5" string="Cotizacion 5">
+                                  <field name="tabla_cotizacion_contact5" widget="one2many_list">
+                                    <tree editable="bottom">
+                                        <field name="num_estaciones"/>
+                                        <field name="dias"/>
+                                        <field name="num_dias"/>
+                                        <field name="horas_x_dias"/>
+                                        <field name="tota_horas" />
+                                        <field name="tvp_costo_hora"  widget="monetary"/>
+                                        <field name="tvp_costo_total"  widget="monetary"/>
+                                        <field name="cliente_costo_hora"  widget="monetary"/>
+                                        <field name="cliente_costo_total"  widget="monetary"/>
+                                        <field name="autorizado_costo_cliente"  widget="monetary"/>
+                                        <field name="autorizado_costo_total_cliente" widget="monetary"/>
+                                    </tree>
+                                  </field>
                               </page>
                               <group>
                                   <field name="firma1_contact" widget="signature"/> 
