Cambio en comentarios en contact

--- a/odt_tvp_v2/views/contact.xml
+++ b/odt_tvp_v2/views/contact.xml
@@ -478,6 +478,12 @@
                                       <p>· La telefonía se factura por separado de acuerdo a los reportes de llamadas y con base en los siguientes cuadros:</p>
                                     </group>
                                   </group>
+                                  <group>
+                                     <p><strong>Especificaciones Generales:</strong></p><br/>
+                                      <p>· Todos los costos son más IVA</p><br/>
+                                      <p>· Todos los precios son en pesos mexicanos</p><br/>
+                                      <p>· Esta cotización es válida por 30 días</p><br/>
+                                  </group>
                                 </page>
                               </div>
                               </page>
