corrección tabla estándar con notas odts

--- a/odt_tvp_v2/views/contact.xml
+++ b/odt_tvp_v2/views/contact.xml
@@ -497,7 +497,7 @@
                                       <p>· Monitoreos de calidad.</p><br/>
                                       <p>· Reportes operativos tipo.</p><br/>
                                       <p>. Desarrollo de guiones.</p><br/>
-                                      <p>.Producción y montaje de Audios básicos (Bienvenida, Fuera de Horario y Espera).</p>
+                                      <p>.Producción y montaje de Audios básicos (Bienvenida, Fuera de Horario y Espera).</p><br/>
                                       <p>.Grabación del 100% de las llamadas.</p>
                                     </group>
                                     <group>
@@ -510,7 +510,7 @@
                                      <p><strong>Especificaciones Generales:</strong></p><br/>
                                       <p>· Todos los costos son más IVA</p><br/>
                                       <p>· Esta cotización es válida por 30 días</p><br/>
-                                      <p>.Una vez iniciado el proyecto no se podrán reducir el número de estaciones pactadas, así como la vigencia establecida, en caso contrario la respuesta será inmediata.</p>
+                                      <p>.Una vez iniciado el proyecto no se podrán reducir el número de estaciones pactadas,así como la vigencia establecida, en caso contrario la respuesta será inmediata.</p>
                                   </group>
                                 </page>
                             </div>
