--- a/odt_tvp_v2/views/views.xml
+++ b/odt_tvp_v2/views/views.xml
@@ -438,6 +438,17 @@
                           <field name="logistica"/>
                           <field name="estrategia"/>
                       </group>
+                      <group>
+                        <field name="btl_tercero"/>
+                        <field name="contact_tercero"/>
+                        <field name="produccion_tercero"/>
+                        <field name="diseno_tercero"/>
+                        <field name="estrategia_tercero"/>
+                        <field name="logistica_tercero"/>
+                        <field name="medios_tercero"/>
+                        <field name="gestoria_tercero"/>
+                        <field name="digital_tercero"/>
+                      </group>
                       <group name="ingresos">
                             <page name="cotizacion_interna_diseno" string="Cotizacion">
                                 <field name="tabla_gastos" widget="one2many_list">
