Ajuste de error campo monetary, fix de operaciones, campos a 3ros con related medios campo p autorizado

--- a/odt_tvp_v2/views/logistica.xml
+++ b/odt_tvp_v2/views/logistica.xml
@@ -284,6 +284,7 @@
                             <group>
                             <field name="firma1_logistica" widget="signature"/>
                             <field name="firma2_logistica" widget="signature"/>
+                            <field name="logistica"/>
                             </group> 
                             <group>
                                 <p style="text-align: justify;">
